--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">jASON</string>
     <string name="title_item_detail">Item Detail</string>
     <string name="URL">https://api.jsonbin.io/v3/b/5f726a107243cd7e8245d58b</string>
+    <string name="URLME">https://api.jsonbin.io/v3/b/634e07c02b3499323be2292a</string>
 </resources>
